--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.SkillSync"
         tools:targetApi="31">
         <activity
-            android:name=".LogIn"
+            android:name="com.android.skillsync.LogIn"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="com.android.skillsync.MainActivity"
             android:exported="true">
         </activity>
     </application>
