--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,17 @@
         tools:targetApi="31">
         <activity
             android:name="com.android.skillsync.LogIn"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name="com.android.skillsync.MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="com.android.skillsync.MainActivity"
-            android:exported="true">
         </activity>
     </application>
 
