--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SkillSync"
         tools:targetApi="31">
+        <activity
+            android:name=".GroupProfile"
+            android:exported="false" />
         <!-- TODO - REMOVE EXPORTED true - just for testing -->
         <activity
             android:name=".NewPostActivity"
             android:exported="true" />
         <activity
             android:name=".LogIn"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
