--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools">
     <!-- permissions for INTERNET -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- permissions for LOCATION -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"  />
 
     <application
         android:allowBackup="true"
@@ -14,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SkillSync"
         tools:targetApi="31">
+        <activity
+            android:name=".MapActivity"
+            android:exported="true" />
         <activity
             android:name=".ForgetPassword"
             android:exported="false" />
