--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,8 @@
     <!-- permissions for INTERNET -->
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- permissions for LOCATION -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"  />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -19,8 +18,11 @@
         android:theme="@style/Theme.SkillSync"
         tools:targetApi="31">
         <activity
+            android:name=".CurrentLocation"
+            android:exported="false" />
+        <activity
             android:name=".MapActivity"
-            android:exported="true" />
+            android:exported="false"/>
         <activity
             android:name=".ForgetPassword"
             android:exported="false" />
